k8/ingress copy.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: api-katchplus
spec:
  rules:
  - host: test.katchplus.com
    http:
      paths:
      - backend:
          serviceName: utelly-proxy-service
          servicePort: 443
        path: /external(/|$)(.*)
      - backend:
          serviceName: katch-user-api-service
          servicePort: 443
        path: /user(/|$)(.*)
  tls:
  - hosts:
    - '*.katchplus.com'
  - secretName: wildcard-katchplus-certificate
